- Fix css issue where login form component title would slide off screen, required wrapper div. - Alter PrimaryButton component to be generic BootstrapButton component such that we can vary colour.

--- a/application/src/main/webapp/react/src/components/organisms/create-new-login/style/style.css
+++ b/application/src/main/webapp/react/src/components/organisms/create-new-login/style/style.css
@@ -1,12 +1,3 @@
-.login-template {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding-bottom: 40vh;
-}
-
 .login-template-title {
     font-size: 5em;
     font-family: Calibri, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
